--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color: #2e383d;
+    background-color: #303538;
     color: #ffffff;
 }
 
@@ -11,10 +11,11 @@ header h1 {
 }
 
 header h1 {
-    color: #d9dcd6;
+    color: #f4f6f3;
+    background-color: rgb(122, 188, 210)
 }
 
-header nav {
+nav {
     padding-top: 10px;
     margin-right: 20px;
     float: right;
@@ -23,7 +24,7 @@ header nav {
 }
 
 header ul {
-    list-style-type: none;
+    list-style-type:none;
 }
 
 header ul li {
@@ -32,6 +33,17 @@ header ul li {
 }
 
 a {
-    color: #ffffff;
+    color: rgb(122, 188, 210);
     text-decoration: none;
+    text-decoration-line: underline;
+    text-underline-position: below;
+}
+
+.hero {
+    height: 180px;
+    width: 100%;
+    margin-bottom: 25px;
+    background-image: url("../images/digital-marketing-meeting.jpg");
+    background-size: cover;
+    background-position: center;
 }
