edited typos and last changes before first deploy

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,6 +146,11 @@ background-size: 670px;
     background-color: rgb(122, 188, 210);
     padding: 5px 10px 5px 20px;
 }
+
+h6 {
+    font-size: 15px;
+    
+}
 #contactmelist {
     font-size: 20px;
     list-style-type: none;
