--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,7 +78,7 @@ a {
 aside {
     flex-basis: 20%;
     border-right: 5px solid #303538;
-    margin: 30px 30px 30px 30px;
+    margin: 20px 30px 30px 30px;
 }
 article { 
     flex-basis: 80%;
@@ -100,7 +100,7 @@ p {
 
 #title{
     text-align: right;
-    padding-right: 40px;
+    padding-right: 68px;
 }
 
 .project1-image {
@@ -133,7 +133,7 @@ background-size: 670px;
 }
 
 .project1-image, .project2-image, .project3-image, .project4-image, .project5-image {
-    border:10px solid rgb(122, 188, 210);
+    border:10px solid #303538;
     text-align: left;
     margin: 10px;
     padding: 10px 10px 10px 0px;
@@ -143,14 +143,14 @@ background-size: 670px;
 }
 #project1-text, #project2-text, #project3-text, #project4-text, #project5-text {
     text-align: left;
-    background-color: rgb(122, 188, 210);
+    background-color: #303538;
     padding: 5px 10px 5px 20px;
 }
 
 h6 {
-    font-size: 15px;
-    
+    font-size: 15px; 
 }
+
 #contactmelist {
     font-size: 20px;
     list-style-type: none;
